--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "rayecountdown",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://rayecountdown.github.io",
+  "homepage": "https://ifo.github.io/rayecountdown",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -12,6 +12,7 @@
     "react-countdown": "^2.3.2",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-twitter-embed": "^4.0.4",
     "save-dev": "^0.0.1-security",
     "web-vitals": "^2.1.4"
   },
